--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".SplashScreen"
+            android:exported="false" />
+        <activity
             android:name=".Gemini"
             android:exported="true" />
         <activity
@@ -29,6 +32,7 @@
             android:exported="false"
             android:label="@string/title_activity_checkout"
             android:theme="@style/Theme.Tap2Eat" />
+
         <meta-data
             android:name="com.google.android.gms.wallet.api.enabled"
             android:value="true" />
@@ -38,9 +42,6 @@
             android:exported="false" />
         <activity
             android:name=".tickPage"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity2"
             android:exported="false" />
         <activity
             android:name=".MapsGoogle"
@@ -71,7 +72,8 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.App.Tap2Eat">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
